--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -18470,7 +18470,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #032040;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18516,7 +18516,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #0381C3;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18562,7 +18562,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #84C318;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18608,7 +18608,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #17a2b8;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18654,7 +18654,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #ffc107;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18700,7 +18700,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #D11141;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18746,7 +18746,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #FFFFFF;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18792,7 +18792,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #343a40;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18838,7 +18838,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #032040;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18884,7 +18884,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #012D61;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18930,7 +18930,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #0381C3;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -18978,7 +18978,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #98DBF9;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19024,7 +19024,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #D0E4F8;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19070,7 +19070,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #F4F8FD;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19116,7 +19116,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #D11141;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19163,7 +19163,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #84C318;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19209,7 +19209,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #696D7D;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19255,7 +19255,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #6A8EAE;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19301,7 +19301,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #343a40;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19347,7 +19347,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #CFD2D8;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19393,7 +19393,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #E0E0E0;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
@@ -19439,7 +19439,7 @@ form.feed-filters {
       content: "";
       position: absolute;
       margin: 0;
-      color: #FFFFFF;
+      color: inherit;
       top: 50%;
       font-size: 1.666666667em;
       margin-top: -0.5em;
