--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_template.scss
@@ -1,5 +1,19 @@
 
 
+#header {
+	padding-top: 10px;
+	&::before {
+		content: '';
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 10px;
+		background-color: $dark-blue;
+		background-image: linear-gradient(to right, $dark-blue, $dark-blue 13%, $gold 13%, $gold 42%, $bright-blue 42%, $bright-blue 56%, $blue 56%, $blue);
+	}
+}
 #header-primary-cta-links {
 	a {
 		@extend .btn-yellow;
@@ -21,11 +35,13 @@
 	align-self: center;
 }
 #header-primary-navigation-menu {
-	font-family: $font-family-mono;
-	font-weight: 500;
+	font-weight: 600;
 	> .menu-item {
 		&:hover,
 		&.active {
+			> a::after {
+				opacity: 1;
+			}
 			> .sub-menu {
 				opacity: 1;
 				visibility: visible;
@@ -33,10 +49,36 @@
 				transform: none;
 			}
 		}
+		> a {
+			text-transform: uppercase;
+			padding: 1rem 0.5rem;
+			position: relative;
+			@include media-breakpoint-up(lg) {
+				padding: 1rem;
+			}
+			&::after {
+				content: '';
+				display: block;
+				position: absolute;
+				left: 0.5rem;
+				right: 0.5rem;
+				bottom: 0.375rem;
+				border-top: 0.375rem solid #ddd;
+				transition: opacity .15s;
+				opacity: 0;
+				@include media-breakpoint-up(lg) {
+					left: 1rem;
+					right: 1rem;
+				}
+				#header.text-color-light & {
+					border-color: $bright-blue;
+				}
+			}
+		}
 	}
 	.sub-menu {
 		font-weight: inherit;
-		background-color: $dark-gray;
+		background-color: $extra-dark-blue;
 		border-radius: 0;
 		.menu-item {
 			&:hover {
@@ -47,6 +89,65 @@
 		}
 		a {
 			color: rgba(#fff, .8);
+		}
+	}
+}
+#header-primary-cta-links {
+	ul {
+		margin: 0 -0.5rem;
+	}
+	li {
+		margin: 0 0.5rem;
+		&.primary > a {
+			border-color: $blue;
+			color: $dark;
+			@include hover() {
+				background-color: $blue;
+				border-color: $blue;
+				color: $bright-blue;
+				#header.text-color-light & {
+					color: $bright-blue;
+				}
+			}
+			#header.is-sticky & {
+				@include hover() {
+					background-color: $blue;
+					color: $bright-blue;
+					border-color: $blue;
+				}
+			}
+		}
+	}
+	a {
+		@extend .btn;
+		@extend .btn-sm;
+		@extend .btn-outline-bright-blue;
+		background-color: transparent;
+		color: $dark;
+		@include media-breakpoint-up(lg) {
+			@include make-button-size(md);
+			border-width: 3px;
+			padding: calc(#{$btn-padding-y} - (3px - #{$btn-border-width})) calc(#{$btn-padding-x} - (3px - #{$btn-border-width}));
+		}
+		// @include media-breakpoint-up(xl) {
+		// 	@include make-button-size(lg);
+		// 	border-width: 4px;
+		// 	padding: calc(#{$btn-padding-y-lg} - (4px - #{$btn-border-width})) calc(#{$btn-padding-x-lg} - (4px - #{$btn-border-width}));
+		// }
+		#header.text-color-light & {
+			color: #fff;
+			@include hover() {
+				color: $dark;
+			}
+		}
+		#header.is-sticky & {
+			background-color: transparent;
+			color: $dark;
+			@include hover() {
+				background-color: $bright-blue;
+				color: $dark;
+				border-color: $bright-blue;
+			}
 		}
 	}
 }
@@ -77,37 +178,53 @@
 // 	}
 // }
 
-// #main-content,
-// #main .container > .inner {
-// 	> .wp-block-crown-blocks-call-to-action.alignfull,
-// 	> .wp-block-crown-blocks-container.alignfull,
-// 	> .wp-block-crown-blocks-container-featured-image.alignfull,
-// 	> .wp-block-crown-blocks-promo.alignfull,
-// 	> .wp-block-crown-blocks-post-header,
-// 	> .wp-block-crown-blocks-resource-header,
-// 	> .wp-block-crown-blocks-event-header,
-// 	> .wp-block-crown-blocks-client-story-header,
-// 	> .wp-block-crown-blocks-webinar-header {
-// 		&:last-child {
-// 			margin-bottom: -40px;
-// 			padding-bottom: 0;
-// 			@include media-breakpoint-up(md) {
-// 				margin-bottom: -60px;
-// 			}
-// 			@include media-breakpoint-up(lg) {
-// 				margin-bottom: -80px;
-// 			}
-// 			@include media-breakpoint-up(xl) {
-// 				margin-bottom: -100px;
-// 			}
-// 			body.single-post &,
-// 			body.single-resource & {
-// 				margin-bottom: 0;
-// 				padding-bottom: 0;
-// 			}
-// 		}
-// 	}
-// }
+
+#main-content,
+#main .container > .inner {
+	> .wp-block-crown-blocks-call-to-action.alignfull,
+	> .wp-block-crown-blocks-container.alignfull,
+	> .wp-block-crown-blocks-container-featured-image.alignfull,
+	> .wp-block-crown-blocks-promo.alignfull,
+	> .wp-block-crown-blocks-post-header,
+	> .wp-block-crown-blocks-resource-header,
+	> .wp-block-crown-blocks-event-header,
+	> .wp-block-crown-blocks-client-story-header,
+	> .wp-block-crown-blocks-webinar-header {
+		&:first-child {
+			margin-top: -40px - 68px - 10px;
+			padding-top: 68px + 10px;
+			@include media-breakpoint-up(md) {
+				margin-top: -60px - 80px - 10px;
+				padding-top: 80px + 10px;
+			}
+			@include media-breakpoint-up(lg) {
+				margin-top: -80px - 130px - 10px;
+				padding-top: 130px + 10px;
+			}
+			@include media-breakpoint-up(xl) {
+				margin-top: -100px - 130px - 10px;
+			}
+		}
+		// &:last-child {
+		// 	margin-bottom: -40px;
+		// 	padding-bottom: 0;
+		// 	@include media-breakpoint-up(md) {
+		// 		margin-bottom: -60px;
+		// 	}
+		// 	@include media-breakpoint-up(lg) {
+		// 		margin-bottom: -80px;
+		// 	}
+		// 	@include media-breakpoint-up(xl) {
+		// 		margin-bottom: -100px;
+		// 	}
+		// 	body.single-post &,
+		// 	body.single-resource & {
+		// 		margin-bottom: 0;
+		// 		padding-bottom: 0;
+		// 	}
+		// }
+	}
+}
 
 
 
@@ -356,45 +473,74 @@
 
 #mobile-menu {
 	background-color: $dark-blue;
+	width: 100%;
+	max-width: none;
 }
-
+#mobile-menu-header {
+	> .upper {
+		border-bottom: none;
+	}
+}
+#mobile-menu-title .title {
+	font-size: 1rem;
+	margin-bottom: 0;
+}
 #mobile-menu-close {
+	font-size: 3rem;
+	width: 3rem;
+	margin-right: -0.9rem;
 	.icon {
 		overflow: hidden;
 		&:before {
 			position: relative;
 			top: .25rem;
 			font-family: $font-family-sans-serif;
+			color: $gold;
+			top: 0;
 		}
 	}
 }
-
-#mobile-menu-primary-cta-links {
-	a {
-		@extend .btn;
-		@extend .btn-sm;
-		@extend .btn-outline-yellow;
-	}
-}
-
 #mobile-menu-primary-navigation-menu {
+	text-align: center;
 	> .menu-item {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
 		&:nth-child(2n-1),
 		&:nth-child(4n-1) {
 			background: transparent;
 		}
+		&.menu-item-has-sub-menu > a {
+			padding-right: 0.75rem;
+		}
+		&.active {
+			> .toggle {
+				transform: rotateX(180deg);
+			}
+		}
 		> a {
 			padding: .75rem 1rem;
-			font-family: $font-family-mono;
 			font-weight: 700;
 			text-transform: uppercase;
+			font-size: 1.5rem;
 		}
 		> .toggle {
-			height: 45px;
+			width: 1.5rem;
+			height: 1.5rem;
+			position: static;
+			background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$bright-blue}" class="bi bi-chevron-down" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/></svg>'));
+			background-repeat: no-repeat;
+			background-size: contain;
+			background-position: center;
 			&:before {
-				padding-top: 0.5rem;
-				font-family: $font-family-sans-serif;
+				display: none;
 			}
+		}
+		> .sub-menu {
+			order: 10;
+			width: 100%;
+			font-size: 1.25rem;
 		}
 	}
 	.sub-menu {
@@ -404,5 +550,43 @@
 		a {
 			padding: .5rem 1rem;
 		}
+	}
+}
+#mobile-menu-primary-cta-links {
+	margin-top: 1rem;
+	margin-bottom: 2rem;
+	display: flex;
+	justify-content: center;
+	ul {
+		display: block;
+		margin: 0;
+	}
+	li {
+		margin: 0;
+		margin-bottom: .5rem;
+		text-align: center;
+	}
+	li.primary > a {
+		border-color: $blue;
+		&:hover {
+			color: $bright-blue;
+			background-color: $blue;
+			border-color: $blue;
+		}
+	}
+	li.tertiary > a {
+		border-color: $tan;
+		&:hover {
+			color: $dark;
+			background-color: $tan;
+			border-color: $tan;
+		}
+	}
+	a {
+		@extend .btn;
+		@extend .btn-md;
+		@extend .btn-outline-bright-blue;
+		border-width: 3px;
+		padding: calc(0.8rem - (3px - 1px)) calc(1.3rem - (3px - 1px));
 	}
 }
