--- a/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ip/assets/src/scss/imports/_common.scss
@@ -105,6 +105,19 @@ blockquote,
 	}
 }
 
+.entry-event-date {
+	.month {
+		text-transform: uppercase;
+	}
+	.date {
+		font-style: normal;
+		font-weight: 700;
+	}
+	.time {
+		letter-spacing: 0;
+	}
+}
+
 
 
 .simple-subscribe-form_wrapper {
@@ -1008,6 +1021,180 @@ blockquote,
 			height: 2.75rem;
 			left: calc(50% - (2.75rem / 2));
 			top: calc(50% - (2.75rem / 2));
+		}
+	}
+}
+
+
+.wp-block-crown-blocks-post-header {
+	margin-bottom: 12rem;
+	@include media-breakpoint-up(md) {
+		margin-bottom: 8rem;
+	}
+	@include media-breakpoint-up(lg) {
+		margin-bottom: 10rem;
+	}
+	> .inner {
+		> .header-contents {
+			margin-bottom: -12rem;
+			@include media-breakpoint-up(md) {
+				margin-bottom: -8rem;
+			}
+			@include media-breakpoint-up(lg) {
+				margin-bottom: -10rem;
+			}
+		}
+	}
+	.entry-categories {
+		background-color: $dark-blue;
+		padding: 1rem;
+		padding-bottom: 0;
+		margin-bottom: 0;
+		@include media-breakpoint-up(lg) {
+			padding: 2rem;
+			padding-bottom: 0;
+		}
+		@include media-breakpoint-up(xl) {
+			margin-left: -2rem;
+			margin-right: -2rem;
+		}
+		.category {
+			border-radius: 0;
+			border-color: #fff;
+			color: #fff;
+			&:hover {
+				background-color: transparent;
+				border-color: #fff;
+			}
+		}
+	}
+	.entry-title {
+		background-color: $dark-blue;
+		padding: 1rem;
+		padding-top: .5rem;
+		color: $white;
+		@include media-breakpoint-up(lg) {
+			padding: 2rem;
+			padding-top: 1rem;
+		}
+		@include media-breakpoint-up(xl) {
+			margin-left: -2rem;
+			margin-right: -2rem;
+		}
+	}
+	.header-meta {
+		border-top: none;
+		padding-top: 0;
+		.entry-date {
+			font-size: 1.25rem;
+			color: $dark;
+		}
+		.social-sharing-links {
+			margin-right: 0;
+			color: $dark;
+			h4 {
+				font-size: 1rem;
+				text-transform: uppercase;
+				letter-spacing: .1em;
+				font-weight: 700;
+			}
+			.menu-item {
+				a {
+					border-color: $dark;
+					.icon svg {
+						fill: $dark;
+					}
+				}
+			}
+		}
+		.subscribe-button {
+			display: none;
+		}
+	}
+}
+
+
+.wp-block-crown-blocks-event-header {
+	color: inherit;
+	> .header-bg {
+		background-image: none;
+		background-color: $extra-light-gray;
+		.bg-image {
+			mix-blend-mode: none;
+			opacity: .1;
+		}
+	}
+	> .inner {
+		> .header-contents {
+			> .inner {
+				display: block;
+				@include media-breakpoint-up(md) {
+					display: flex;
+					flex-wrap: wrap;
+				}
+			}
+			.title-container {
+				@include media-breakpoint-up(md) {
+					width: 70%;
+				}
+			}
+			.entry-labels {
+				margin-bottom: 0.5rem;
+				span {
+					text-transform: uppercase;
+					letter-spacing: .1em;
+					font-weight: 700;
+					display: inline-block;
+					background-color: $light-blue;
+					color: $dark;
+					font-size: 1rem;
+					padding: .25rem .75rem;
+				}
+			}
+			.entry-title {
+				font-weight: 700;
+				text-decoration: underline;
+				color: $gold;
+				text-decoration-color: $dark;
+				@include media-breakpoint-up(md) {
+					margin-bottom: 5rem;
+				}
+				@include media-breakpoint-up(lg) {
+					font-size: 3.5rem;
+				}
+			}
+			.date-container {
+				@include media-breakpoint-up(md) {
+					width: 25%;
+				}
+			}
+			.entry-event-date {
+				.date {
+					color: $bright-blue;
+				}
+				.time {
+					font-size: 1.5rem;
+					font-weight: 400;
+				}
+			}
+			.social-sharing-links {
+				margin-left: 0;
+				margin-right: 0;
+				margin-top: 2rem;
+				@include media-breakpoint-up(md) {
+					width: 100%;
+					margin-top: -4rem;
+					margin-bottom: 4rem;
+				}
+				.menu-item {
+					a {
+						border-color: $dark;
+					}
+					.icon svg {
+						fill: $dark;
+					}
+				}
+			}
 		}
 	}
 }
